Changes required to publish this project as a Lightbend activator template.

--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Using Angular2 and Typescript with Play</title>
+  <title>Using Angular2 and Typescript with akka-http</title>
 </head>
 <body>
 <div>
   <h2>Introduction</h2>
   <p>
-    Activator doesn't support json files. So it's unfortunately not possible to write an activator tutorial for this.
+    This is a simple example of how to build a web applications using only the tools that SBT (simple build tool) echo-system offers. No need of bower, npm, or grunt. Web dependencies management is handled by the sbt-web plugin by means of webjars.  
   </p>
 </div>
 </body>
